Rebase, unrename a few fields
