# pkg/apis/pipeline/v1beta1/swagger.json
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 {
   "swagger": "2.0",
   "info": {
@@ -323,7 +321,7 @@
           "type": "string"
         },
         "message": {
-          "description": "Message is the text of error (if any)",
+          "description": "Error is the text of error (if any)",
           "type": "string",
           "default": ""
         },
@@ -1229,6 +1227,15 @@
           },
           "x-kubernetes-list-type": "atomic"
         },
+        "matrix": {
+          "description": "Matrix declares parameters used to fan out this task.",
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.Param"
+          },
+          "x-kubernetes-list-type": "atomic"
+        },
         "name": {
           "description": "Name is the name of this task within the context of a Pipeline. Name is used as a coordinate with the `from` and `runAfter` fields to establish the execution order of tasks relative to one another.",
           "type": "string"
@@ -1450,6 +1457,22 @@
         "pipelineTaskName": {
           "type": "string"
         },
+        "sidecarOverrides": {
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.TaskRunSidecarOverride"
+          },
+          "x-kubernetes-list-type": "atomic"
+        },
+        "stepOverrides": {
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.TaskRunStepOverride"
+          },
+          "x-kubernetes-list-type": "atomic"
+        },
         "taskPodTemplate": {
           "$ref": "#/definitions/pod.Template"
         },
@@ -1477,6 +1500,39 @@
         "optional": {
           "description": "Optional marks a Workspace as not being required in PipelineRuns. By default this field is false and so declared workspaces are required.",
           "type": "boolean"
+        }
+      }
+    },
+    "v1beta1.ResolverParam": {
+      "description": "ResolverParam is a single parameter passed to a resolver.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "description": "Name is the name of the parameter that will be passed to the resolver.",
+          "type": "string"
+        },
+        "value": {
+          "description": "Value is the string value of the parameter that will be passed to the resolver.",
+          "type": "string"
+        }
+      }
+    },
+    "v1beta1.ResolverRef": {
+      "description": "ResolverRef can be used to refer to a Pipeline or Task in a remote location like a git repo. This feature is in alpha and these fields are only available when the alpha feature gate is enabled.",
+      "type": "object",
+      "properties": {
+        "resolver": {
+          "description": "Resolver is the name of the resolver that should perform resolution of the referenced Tekton resource, such as \"git\".",
+          "type": "string"
+        },
+        "resource": {
+          "description": "Resource contains the parameters used to identify the referenced Tekton resource. Example entries might include \"repo\" or \"path\" but the set of params ultimately depends on the chosen resolver.",
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.ResolverParam"
+          },
+          "x-kubernetes-list-type": "atomic"
         }
       }
     },
@@ -2194,6 +2250,21 @@
         }
       }
     },
+    "v1beta1.TaskRunSidecarOverride": {
+      "description": "TaskRunSidecarOverride is used to override the values of a Sidecar in the corresponding Task.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "description": "The name of the Sidecar to override.",
+          "type": "string"
+        },
+        "resources": {
+          "description": "The resource requirements to apply to the Sidecar.",
+          "default": {},
+          "$ref": "#/definitions/v1.ResourceRequirements"
+        }
+      }
+    },
     "v1beta1.TaskRunSpec": {
       "description": "TaskRunSpec defines the desired state of TaskRun",
       "type": "object",
@@ -2220,9 +2291,27 @@
           "type": "string",
           "default": ""
         },
+        "sidecarOverrides": {
+          "description": "Overrides to apply to Sidecars in this TaskRun. If a field is specified in both a Sidecar and a SidecarOverride, the value from the SidecarOverride will be used. This field is only supported when the alpha feature gate is enabled.",
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.TaskRunSidecarOverride"
+          },
+          "x-kubernetes-list-type": "atomic"
+        },
         "status": {
           "description": "Used for cancelling a taskrun (and maybe more later on)",
           "type": "string"
+        },
+        "stepOverrides": {
+          "description": "Overrides to apply to Steps in this TaskRun. If a field is specified in both a Step and a StepOverride, the value from the StepOverride will be used. This field is only supported when the alpha feature gate is enabled.",
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/v1beta1.TaskRunStepOverride"
+          },
+          "x-kubernetes-list-type": "atomic"
         },
         "taskRef": {
           "description": "no more than one of the TaskRef and TaskSpec may be specified.",
@@ -2426,6 +2515,21 @@
         "taskSpec": {
           "description": "TaskSpec contains the Spec from the dereferenced Task definition used to instantiate this TaskRun.",
           "$ref": "#/definitions/v1beta1.TaskSpec"
+        }
+      }
+    },
+    "v1beta1.TaskRunStepOverride": {
+      "description": "TaskRunStepOverride is used to override the values of a Step in the corresponding Task.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "description": "The name of the Step to override.",
+          "type": "string"
+        },
+        "resources": {
+          "description": "The resource requirements to apply to the Step.",
+          "default": {},
+          "$ref": "#/definitions/v1.ResourceRequirements"
         }
       }
     },
@@ -2663,4 +2767,3 @@
     }
   }
 }
->>>>>>> 43db1bd1f (Add logic to ignore pre-existing names_match violations)
